# currency_exchange

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: .env.example  manage.py
app/api/: models.py  tasks.py  tests.py  views.py
app/api/migrations/: 0001_initial.py
app/exchange_currency/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/runner/: celery.sh  django_run.sh
app/templates/: currency.html
