[tool.poetry]
name = "currency_exchange"
version = "0.1.0"
description = ""
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
requests = "^2.31.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
