[tool.poetry]
name = "currency_exchange"
version = "0.1.0"
description = ""
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.9"
requests = "^2.31.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
django-celery-beat = "^2.5.0,<=3.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
